--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist": "./node_modules/coffee-script/bin/coffee --output . --compile *.coffee",
     "lint": "./node_modules/coffeelint/bin/coffeelint *.coffee",
     "bower": "bower install --force --production --no-interactive",
-    "nahual": "nahual -ST saucelabs -- python -m SimpleHTTPServer"
+    "nahual": "nahual -ST saucelabs -E 'python -m SimpleHTTPServer'"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.7.1",
-    "coffee-script": "^1.10.0",
-    "coffeelint": "^1.12.1",
-    "nahual": "0.0.12",
-    "nightwatch": "^0.9.7"
+    "bower": "1.7.1",
+    "coffee-script": "1.10.0",
+    "coffeelint": "1.12.1",
+    "nahual": "0.1.0"
   }
 }
