--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist": "./node_modules/coffee-script/bin/coffee --output . --compile *.coffee",
     "lint": "./node_modules/coffeelint/bin/coffeelint *.coffee",
     "bower": "bower install --force --production --no-interactive",
-    "nahual": "nahual --target saucelabs -E 'python -m SimpleHTTPServer'"
+    "nahual": "nahual --browser chrome --target saucelabs -E 'python -m SimpleHTTPServer'"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "1.7.1",
+    "chromedriver": "^2.23.1",
     "coffee-script": "1.10.0",
     "coffeelint": "1.12.1",
     "nahual": "0.1.0"
