--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist": "./node_modules/coffee-script/bin/coffee --output . --compile *.coffee",
     "lint": "./node_modules/coffeelint/bin/coffeelint *.coffee",
     "bower": "bower install --force --production --no-interactive",
-    "nahual": "nahual --browser chrome --target saucelabs -E 'python -m SimpleHTTPServer'"
+    "nahual": "nahual --browser chrome --target saucelabs -E 'python\\ -m\\ SimpleHTTPServer'"
   },
   "repository": {
     "type": "git",
