--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Take care of your elements on the viewport",
   "main": "scroll-kit.js",
   "scripts": {
-    "dev": "./node_modules/coffee-script/bin/coffee --watch --output . --compile *.coffee",
-    "dist": "./node_modules/coffee-script/bin/coffee --output . --compile *.coffee",
-    "lint": "./node_modules/coffeelint/bin/coffeelint *.coffee",
+    "dev": "yarn dist -- -s",
+    "dist": "tarima -S scroll-kit -D .",
+    "lint": "coffeelint *.coffee",
     "bower": "bower install --force --production --no-interactive",
     "nahual": "nahual -ST saucelabs -E 'python -m SimpleHTTPServer'"
   },
@@ -22,9 +22,15 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.7.1",
-    "coffee-script": "^1.10.0",
     "coffeelint": "^1.12.1",
+    "coffeescript": "^1.12.5",
     "nahual": "0.0.12",
-    "nightwatch": "^0.9.7"
+    "nightwatch": "^0.9.7",
+    "tarima": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "chokidar": "^1.7.0",
+    "node-notifier": "^5.1.2",
+    "tarima-lr": "^0.2.0"
   }
 }
