--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bower": "^1.7.1",
     "coffeelint": "^1.12.1",
     "coffeescript": "^1.12.5",
-    "nahual": "0.0.12",
+    "nahual": "pateketrueke/nahual",
     "nightwatch": "^0.9.7",
     "tarima": "^2.0.0"
   },
