--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist": "tarima -S scroll-kit.coffee -D . -e",
     "lint": "coffeelint *.coffee",
     "bower": "bower install --force --production --no-interactive",
-    "nahual": "nahual -ST saucelabs -E 'python -m SimpleHTTPServer' --chrome"
+    "nahual": "nahual -ST saucelabs -E 'python -m SimpleHTTPServer' --browser chrome"
   },
   "repository": {
     "type": "git",
