--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ node_js:
 script:
 - yarn lint
 - yarn bower
-- yarn nahual
+- yarn nahual -- -T saucelabs --browser firefox
 notifications:
   email: false
