--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scroll-kit",
-  "version": "0.4.0-dev",
+  "version": "0.3.6",
   "description": "Take care of your elements on the viewport",
   "main": "scroll-kit.js",
   "scripts": {
